# HSM-Agents-Hub

./: .gitignore  README.md  build-server.ts  next.config.mjs  package.json  pnpm-lock.yaml  script.py
.github/workflows/: main.yml
app/: globals.css  layout.tsx
app/(chat)/: page.tsx
app/agent/: page.tsx
app/api/chat/: route.ts
components/: agents.tsx  chat-history.tsx  chat-list.tsx  chat-message.tsx  chat.tsx  clear-history.tsx  footer.tsx  header.tsx  prompt-form.tsx  sidebar-actions.tsx  sidebar-desktop.tsx  sidebar-item.tsx  sidebar-items.tsx  sidebar-list.tsx  theme-toggle.tsx
components/ui/: codeblock.tsx
lib/: types.ts  utils.ts
server/: agent.ts  chat.ts  models.ts  prompts.ts  server.ts  tsconfig.json  types.ts
server/functions/: api.ts  handlers.ts  registry.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  handlers.rs  main.rs
